--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title> UTN FRA</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon (1).ico">
 <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
 <h1>Control de versiones</h1>
+<h2>Alejo Perez
 </body>
 </html>
