Agregar nombre y apellido en tag H3 en index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Control de versiones</h1>
-<h2>Alejo Perez
+<h2>Alejo Perez</h2>
+<h3>Lucia Laura Pokoik</h3>
 </body>
 </html>
