Beta agrega apellido nombre y fecha a index.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h1>Control de versiones</h1>
 <h2>Alejo Perez</h2>
 <h3>Lucia Laura Pokoik</h3>
+<p>Perez Alejo 17/11/24 21:32</p>
 </body>
 </html>
